--- a/Opportunity-Portal/user_data/admin/Admin_Login.html
+++ b/Opportunity-Portal/user_data/admin/Admin_Login.html
@@ -1,3 +1,7 @@
+<?php 
+    session_start();
+ ?>
+
 
 <!DOCTYPE html>
 <html lang="en">
@@ -85,6 +89,8 @@
                   <input type="password" class="form-control" name="inputPassword" placeholder="Password" required="required">
                 </div>
               </div>
+              <br>
+              <!-- Remember me feature disabled temporary
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <div class="checkbox">
@@ -93,7 +99,7 @@
                     </label>
                   </div>
                 </div>
-              </div>
+              </div> -->
               <div class="form-group">
                 <div class="col-sm-offset-2 col-sm-10">
                   <!--<button type="submit" class="btn btn-primary" onclick="window.location.href='./main.html'">Back</button>-->
