--- a/Opportunity-Portal/user_data/user/User_Login.html
+++ b/Opportunity-Portal/user_data/user/User_Login.html
@@ -2,6 +2,7 @@
   session_start();
 ?>
 
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -102,6 +103,8 @@
                       <input type="password" class="form-control" id="inputPasswordAd" name="password" placeholder="Password">
                     </div>
                   </div>
+                  <br>
+                  <!-- Remember me feature Requires config.php file
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                       <div class="checkbox">
@@ -110,7 +113,7 @@
                         </label>
                       </div>
                     </div>
-                  </div>
+                  </div> -->
                   <div class="form-group">
                     <div class="col-sm-offset-2 col-sm-10">
                       <!--<button type="submit" class="btn btn-primary" onclick="window.location.href='./main.html'">Back</button>-->
