--- a/Opportunity-Portal/user_data/user/User_Login.html
+++ b/Opportunity-Portal/user_data/user/User_Login.html
@@ -120,6 +120,12 @@
                       <button type="submit" class="btn btn-success">Login</button>                  
                     </div>
                   </div>
+
+                  <div class="form-group">
+                    <div class="col-sm-9 control-label">
+                      <b>New User ? Haven't signed up yet ? <a href="../Reg_Form.html">Register here</a></b>
+                    </div>
+                  </div>
             </form>
             </div>
           </div>
