--- a/Opportunity-Portal/user_data/Reg_Form.html
+++ b/Opportunity-Portal/user_data/Reg_Form.html
@@ -1,4 +1,10 @@
-
+<?php 
+  session_start();
+  if (!isset($_SESSION["AdminId"])) {
+    header("Location: ../Error.html");
+    exit();
+  }
+ ?>
 <!DOCTYPE html>
 <html lang="en">
   
@@ -156,7 +162,7 @@
               <div class="panel-body" style="">
                 <div class="page-header">
                     <div class="header" style="margin-top: 5px">
-                      <div><b>USER</b><span><b> REGISTRATION</b></span></div>
+                      <div><b>USER</b><span><b> REGISTRATION</b></span></div>                      
                     </div>
 
                    
@@ -196,6 +202,7 @@
                           <input type="radio" value="Female" name="sex"> Female
                         </label>                          
                       </div>
+                      <!-- District Details Removed
                       <div class="form-group">
                         <label for="inputDistrict" class="col-sm-2 control-label">Select District</label>
                         <select size="1" name="district" id="" class="col-sm-6" style="margin-top: 3px; margin-left: 18px">
@@ -225,7 +232,7 @@
                                 <option value="Trincomalee">Trincomalee</option>
                                 <option value="Vavuniya">Vavuniya</option>
                       </select>
-                      </div>
+                      </div> -->
                       <div class="form-group">
                         <label for="inputEmail" class="col-sm-2 control-label" class="inform">Email Address</label>
                         <div class="col-sm-10">
@@ -268,6 +275,7 @@
                           <button type="submit" id="reg-btn" class="btn btn-success" name="btn-reg">Register</button>
                         </div>
                       </div>
+                      <input type="hidden" name="AdminId" value="<? echo $session ?>">
                   </form>
   
               </div>
