All Inline CSS removed for ease

--- a/Opportunity-Portal/user_data/Reg_Form.html
+++ b/Opportunity-Portal/user_data/Reg_Form.html
@@ -71,72 +71,8 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <title>User Registration</title>
 
-    <style>
-      @import url(http://fonts.googleapis.com/css?family=Exo:100,200,400);
-      @import url(http://fonts.googleapis.com/css?family=Source+Sans+Pro:700,400,300);
-
-    .body{
-        position: fixed; 
-        overflow-y: scroll;
-        width: 100%;
-        top: -20px;
-        left: -20px;
-        right: -40px;
-        bottom: -40px;
-        width: auto;
-        height: auto;
-        background-image: url(../img/Reg.jpg);
-        background-size: cover;
-        -webkit-filter: blur(2px);
-      
-      }      
-
-      .header{
-          position: relative;
-          /*top: calc(50% - 250px);
-          left: calc(50% - 167px);*/
-
-  
-      }
-
-      .header div{
-        float: left;
-        color: #000;
-        font-family: 'Exo', sans-serif;
-        font-size: 50px;
-        font-weight: 400;
-      }
-
-      .header div span{
-        color: #F29E20 !important;
-      }
-
-
-
-        /* Popover */
-        .popover {
-            border: 2px dotted red;
-        }
-        /* Popover Header */
-        .popover-title {
-            background-color: #73AD21; 
-            color: #000; 
-            font-size: 28px;
-            text-align:center;
-        }
-        /* Popover Body */
-        .popover-content {
-            background-color: coral;
-            color: #FFFFFF;
-            padding: 25px;
-        }
-        /* Popover Arrow */
-        .arrow {
-            border-right-color: red !important;
-        }
-
-    </style>
-
+    <!-- CSS for page Background -->
+    <link href="../css/Reg_Form.css" rel="stylesheet">
 
     <!-- Bootstrap -->
     <link href="../css/bootstrap.min.css" rel="stylesheet">
